--- a/styles/css/image-gallery.css
+++ b/styles/css/image-gallery.css
@@ -39,7 +39,8 @@
   -ms-user-select: none;
   -o-user-select: none;
   user-select: none;
-  -webkit-tap-highlight-color: transparent; }
+  -webkit-tap-highlight-color: transparent;
+  padding: 10px; }
   .image-gallery.fullscreen-modal {
     background: #000;
     bottom: 0;
