--- a/styles/scss/image-gallery.scss
+++ b/styles/scss/image-gallery.scss
@@ -15,8 +15,10 @@ $ig-transparent: rgba(0, 0, 0, 0) !default;
 }
 
 .image-gallery {
+
   @include vendor-prefix('user-select', none);
   -webkit-tap-highlight-color: $ig-transparent;
+  padding: 10px;
 
   &.fullscreen-modal {
     background: $ig-black;
