--- a/styles/css/image-gallery.css
+++ b/styles/css/image-gallery.css
@@ -241,6 +241,65 @@
           padding: 5px 5px 5px 20px;
           font-size: 15px;
           display: none; } }
+  .image-gallery-slide .meshapp-insidenav-info-wrapper {
+    top: 35%;
+    display: flex;
+    flex-direction: column;
+    position: absolute; }
+    .image-gallery-slide .meshapp-insidenav-info-wrapper .meshapp-inside-nav-title {
+      font-size: 25px;
+      font-weight: bold;
+      line-height: 1;
+      padding: 20px;
+      display: flex;
+      white-space: normal;
+      text-align: left; }
+      @media (max-width: 768px) {
+        .image-gallery-slide .meshapp-insidenav-info-wrapper .meshapp-inside-nav-title {
+          font-size: 15px;
+          padding: 20px;
+          display: none; } }
+    .image-gallery-slide .meshapp-insidenav-info-wrapper .meshapp-inside-nav-description-wrapper {
+      display: flex; }
+      .image-gallery-slide .meshapp-insidenav-info-wrapper .meshapp-inside-nav-description-wrapper .meshapp-inside-nav-description {
+        line-height: 1;
+        padding-left: 20px;
+        font-size: 20px;
+        display: flex;
+        flex-direction: row;
+        flex: 0.8;
+        padding: 5px 5px 5px 20px;
+        white-space: normal;
+        text-align: left; }
+        @media (max-width: 768px) {
+          .image-gallery-slide .meshapp-insidenav-info-wrapper .meshapp-inside-nav-description-wrapper .meshapp-inside-nav-description {
+            padding: 5px 5px 5px 20px;
+            font-size: 15px;
+            display: none; } }
+      .image-gallery-slide .meshapp-insidenav-info-wrapper .meshapp-inside-nav-description-wrapper .meshapp-inside-nav-nav-wrapper {
+        display: flex;
+        flex: 0.2;
+        padding: 5px 5px 5px 20px;
+        align-items: center;
+        justify-content: center;
+        text-align: center; }
+        .image-gallery-slide .meshapp-insidenav-info-wrapper .meshapp-inside-nav-description-wrapper .meshapp-inside-nav-nav-wrapper p {
+          margin-right: 5px; }
+        .image-gallery-slide .meshapp-insidenav-info-wrapper .meshapp-inside-nav-description-wrapper .meshapp-inside-nav-nav-wrapper .insidenav-slider-left-nav {
+          font-size: 36px;
+          margin-right: 20px;
+          cursor: pointer; }
+        .image-gallery-slide .meshapp-insidenav-info-wrapper .meshapp-inside-nav-description-wrapper .meshapp-inside-nav-nav-wrapper .insidenav-slider-right-nav {
+          font-size: 36px;
+          margin-left: 10px;
+          cursor: pointer; }
+        .image-gallery-slide .meshapp-insidenav-info-wrapper .meshapp-inside-nav-description-wrapper .meshapp-inside-nav-nav-wrapper .insidenav-slider-firstnumber {
+          font-size: 36px;
+          font-weight: bold;
+          padding-bottom: 30px; }
+        .image-gallery-slide .meshapp-insidenav-info-wrapper .meshapp-inside-nav-description-wrapper .meshapp-inside-nav-nav-wrapper .insidenav-slider-secondnumber {
+          padding-top: 30px;
+          font-size: 18px; }
   .image-gallery-slide .image-gallery-description {
     background: rgba(0, 0, 0, 0.4);
     bottom: 70px;
