--- a/styles/scss/image-gallery.scss
+++ b/styles/scss/image-gallery.scss
@@ -282,6 +282,81 @@ $ig-transparent: rgba(0, 0, 0, 0) !default;
     }
   }
 
+  .meshapp-insidenav-info-wrapper {
+    top: 35%;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+
+    .meshapp-inside-nav-title {
+      font-size: 25px;
+      font-weight: bold;
+      line-height: 1;
+      padding: 20px;
+      display: flex;
+      white-space: normal;
+      text-align: left;
+
+      @media (max-width: 768px) {
+          font-size: 15px;
+          padding: 20px;
+          display: none; }
+    }
+
+    .meshapp-inside-nav-description-wrapper {
+      display: flex;
+
+      .meshapp-inside-nav-description {
+        line-height: 1;
+        padding-left: 20px;
+        font-size: 20px;
+        display: flex;
+        flex-direction: row;
+        flex: 0.8;
+        padding: 5px 5px 5px 20px;
+        white-space: normal;
+        text-align: left;
+  
+        @media (max-width: $ig-screen-sm-min) {
+            padding: 5px 5px 5px 20px;
+            font-size: 15px;
+            display: none; }
+      }
+
+      .meshapp-inside-nav-nav-wrapper {
+        display: flex;
+        flex: 0.2;
+        padding: 5px 5px 5px 20px;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        p {
+          margin-right: 5px;
+        }
+        .insidenav-slider-left-nav {
+          font-size: 36px;
+          margin-right: 20px;
+          cursor: pointer;
+        }
+        .insidenav-slider-right-nav {
+          font-size: 36px;
+          margin-left: 10px;
+          cursor: pointer;
+        }
+        .insidenav-slider-firstnumber {
+          font-size: 36px;
+          font-weight: bold;
+          padding-bottom: 30px;
+        }
+        .insidenav-slider-secondnumber {
+          padding-top: 30px;
+          font-size: 18px;
+        }
+      }
+    }
+
+  }
+
   .image-gallery-description {
     background: $ig-background-black;
     bottom: 70px;
