--- a/styles/css/image-gallery.css
+++ b/styles/css/image-gallery.css
@@ -245,7 +245,8 @@
     top: 35%;
     display: flex;
     flex-direction: column;
-    position: absolute; }
+    position: absolute;
+    width: 100%; }
     .image-gallery-slide .meshapp-insidenav-info-wrapper .meshapp-inside-nav-title {
       font-size: 25px;
       font-weight: bold;
@@ -260,14 +261,16 @@
           padding: 20px;
           display: none; } }
     .image-gallery-slide .meshapp-insidenav-info-wrapper .meshapp-inside-nav-description-wrapper {
-      display: flex; }
+      display: flex;
+      justify-content: space-between;
+      width: 100%; }
       .image-gallery-slide .meshapp-insidenav-info-wrapper .meshapp-inside-nav-description-wrapper .meshapp-inside-nav-description {
         line-height: 1;
         padding-left: 20px;
         font-size: 20px;
         display: flex;
         flex-direction: row;
-        flex: 0.8;
+        width: 100%;
         padding: 5px 5px 5px 20px;
         white-space: normal;
         text-align: left; }
@@ -300,6 +303,9 @@
         .image-gallery-slide .meshapp-insidenav-info-wrapper .meshapp-inside-nav-description-wrapper .meshapp-inside-nav-nav-wrapper .insidenav-slider-secondnumber {
           padding-top: 30px;
           font-size: 18px; }
+        @media (max-width: 768px) {
+          .image-gallery-slide .meshapp-insidenav-info-wrapper .meshapp-inside-nav-description-wrapper .meshapp-inside-nav-nav-wrapper {
+            display: none; } }
   .image-gallery-slide .image-gallery-description {
     background: rgba(0, 0, 0, 0.4);
     bottom: 70px;
