--- a/styles/scss/image-gallery.scss
+++ b/styles/scss/image-gallery.scss
@@ -287,6 +287,7 @@ $ig-transparent: rgba(0, 0, 0, 0) !default;
     display: flex;
     flex-direction: column;
     position: absolute;
+    width: 100%;
 
     .meshapp-inside-nav-title {
       font-size: 25px;
@@ -305,6 +306,8 @@ $ig-transparent: rgba(0, 0, 0, 0) !default;
 
     .meshapp-inside-nav-description-wrapper {
       display: flex;
+      justify-content: space-between;
+      width: 100%;
 
       .meshapp-inside-nav-description {
         line-height: 1;
@@ -312,7 +315,7 @@ $ig-transparent: rgba(0, 0, 0, 0) !default;
         font-size: 20px;
         display: flex;
         flex-direction: row;
-        flex: 0.8;
+        width: 100%;
         padding: 5px 5px 5px 20px;
         white-space: normal;
         text-align: left;
@@ -352,6 +355,8 @@ $ig-transparent: rgba(0, 0, 0, 0) !default;
           padding-top: 30px;
           font-size: 18px;
         }
+        @media (max-width: $ig-screen-sm-min) {
+          display: none; }
       }
     }
 
