--- a/styles/css/image-gallery.css
+++ b/styles/css/image-gallery.css
@@ -209,7 +209,8 @@
   .image-gallery-slide.center {
     position: relative; }
   .image-gallery-slide img {
-    width: 100%; }
+    width: 100%;
+    max-height: 500px; }
   .image-gallery-slide .meshapp-info-wrapper {
     top: 0px;
     display: flex;
