--- a/styles/scss/image-gallery.scss
+++ b/styles/scss/image-gallery.scss
@@ -243,6 +243,7 @@ $ig-transparent: rgba(0, 0, 0, 0) !default;
 
   img {
     width: 100%;
+    max-height: 500px;
   }
 
   .meshapp-info-wrapper {
