--- a/styles/scss/image-gallery.scss
+++ b/styles/scss/image-gallery.scss
@@ -244,6 +244,7 @@ $ig-transparent: rgba(0, 0, 0, 0) !default;
   img {
     width: 100%;
     max-height: 500px;
+    object-fit: cover;
   }
 
   .meshapp-info-wrapper {
