adding index on insidenav mobile

--- a/styles/css/image-gallery.css
+++ b/styles/css/image-gallery.css
@@ -200,6 +200,62 @@
       display: flex;
       flex-direction: column; } }
 
+.insidenav-slider-mobile-info {
+  display: none;
+  padding: 15px 5px 15px 5px; }
+  .insidenav-slider-mobile-info .title {
+    display: flex;
+    width: 100%;
+    font-weight: bold;
+    font-size: 16px;
+    justify-content: center;
+    text-align: center; }
+    .insidenav-slider-mobile-info .title p {
+      line-height: 1.3em;
+      word-break: normal;
+      white-space: normal; }
+  .insidenav-slider-mobile-info .description {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    text-align: center; }
+    .insidenav-slider-mobile-info .description p {
+      line-height: 1.3em;
+      word-break: normal;
+      white-space: normal; }
+  .insidenav-slider-mobile-info .inside-nav-mobile-index {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    text-align: center; }
+    .insidenav-slider-mobile-info .inside-nav-mobile-index .meshapp-inside-nav-nav-wrapper {
+      display: flex;
+      padding: 5px 5px 5px 20px;
+      align-items: center;
+      justify-content: center;
+      text-align: center; }
+      .insidenav-slider-mobile-info .inside-nav-mobile-index .meshapp-inside-nav-nav-wrapper p {
+        margin-right: 5px; }
+      .insidenav-slider-mobile-info .inside-nav-mobile-index .meshapp-inside-nav-nav-wrapper .insidenav-slider-left-nav {
+        font-size: 36px;
+        margin-right: 20px;
+        cursor: pointer; }
+      .insidenav-slider-mobile-info .inside-nav-mobile-index .meshapp-inside-nav-nav-wrapper .insidenav-slider-right-nav {
+        font-size: 36px;
+        margin-left: 10px;
+        cursor: pointer; }
+      .insidenav-slider-mobile-info .inside-nav-mobile-index .meshapp-inside-nav-nav-wrapper .insidenav-slider-firstnumber {
+        font-size: 36px;
+        font-weight: bold;
+        padding-bottom: 30px; }
+      .insidenav-slider-mobile-info .inside-nav-mobile-index .meshapp-inside-nav-nav-wrapper .insidenav-slider-secondnumber {
+        padding-top: 30px;
+        font-size: 18px; }
+  @media (max-width: 768px) {
+    .insidenav-slider-mobile-info {
+      display: flex;
+      flex-direction: column; } }
+
 .image-gallery-slide {
   background: #fff;
   left: 0;
