--- a/styles/scss/image-gallery.scss
+++ b/styles/scss/image-gallery.scss
@@ -365,8 +365,9 @@ $ig-transparent: rgba(0, 0, 0, 0) !default;
     width: 100%;
 
     .meshapp-inside-nav-title {
-      font-size: 25px;
-      font-weight: bold;
+      font-size: 36px;
+      font-weight: 400;
+      text-transform: uppercase;
       line-height: 1;
       padding: 20px;
       display: flex;
@@ -385,12 +386,12 @@ $ig-transparent: rgba(0, 0, 0, 0) !default;
       width: 100%;
 
       .meshapp-inside-nav-description {
-        line-height: 1;
+        line-height: 25px;
         padding-left: 20px;
         font-size: 20px;
         display: flex;
         flex-direction: row;
-        width: 100%;
+        width: 60%;
         padding: 5px 5px 5px 20px;
         white-space: normal;
         text-align: left;
