--- a/styles/scss/image-gallery.scss
+++ b/styles/scss/image-gallery.scss
@@ -37,6 +37,46 @@ $ig-transparent: rgba(0, 0, 0, 0) !default;
     }
   }
 
+  // andromeda-banner-slider styles 
+  &.andromeda-banner-slider {
+    width: 100% !important;
+    padding: 0;
+
+    .container{
+      position: absolute;
+      top: 20%;
+      left: 50%;
+      -webkit-transform: translateX(-50%);
+      transform: translateX(-50%);
+    }
+    
+    .meshapp-info-wrapper {
+      $title-font-size: 50px;
+      position: relative;
+      display: block;
+      max-width: 500px;
+      height: 60%;
+      overflow: hidden;
+      text-overflow: ellipsis;
+
+      .meshapp-image-gallery-title {
+        font-size: $title-font-size;
+      }
+
+      .meshapp-image-gallery-description{
+        font-size: $title-font-size * 0.32;
+        font-weight: 600;
+        line-height: 1.2;
+      }
+    }
+
+    .presentation-slider-bullets {
+        justify-content: center;
+        bottom: 15%;
+        position: absolute;
+    }
+  }
+
 }
 
 .image-gallery-content {
