--- a/styles/css/image-gallery.css
+++ b/styles/css/image-gallery.css
@@ -80,6 +80,13 @@
       justify-content: center;
       bottom: 15%;
       position: absolute; }
+      .image-gallery.andromeda-banner-slider .presentation-slider-bullets .image-gallery-bullet {
+        padding: 3px; }
+        .image-gallery.andromeda-banner-slider .presentation-slider-bullets .image-gallery-bullet.active {
+          width: 60px;
+          padding: 0;
+          border-radius: 3px;
+          height: 4px; }
 
 .image-gallery-content {
   position: relative;
