--- a/styles/scss/image-gallery.scss
+++ b/styles/scss/image-gallery.scss
@@ -74,6 +74,17 @@ $ig-transparent: rgba(0, 0, 0, 0) !default;
         justify-content: center;
         bottom: 15%;
         position: absolute;
+
+        .image-gallery-bullet {
+          padding: 3px;
+
+          &.active {
+            width: 60px;
+            padding: 0;
+            border-radius: 3px;
+            height: 4px;
+          }
+      }
     }
   }
 
