--- a/styles/css/image-gallery.css
+++ b/styles/css/image-gallery.css
@@ -67,6 +67,10 @@
         .image-gallery.andromeda-banner-slider .container {
           top: 5%;
           display: block; } }
+    @media (max-width: 768px) {
+      .image-gallery.andromeda-banner-slider img {
+        height: 100vh;
+        max-height: 100%; } }
     .image-gallery.andromeda-banner-slider .meshapp-info-wrapper {
       position: relative;
       display: block;
@@ -93,6 +97,9 @@
       justify-content: center;
       bottom: 15%;
       position: absolute; }
+      @media (max-width: 768px) {
+        .image-gallery.andromeda-banner-slider .presentation-slider-bullets {
+          bottom: 0; } }
       .image-gallery.andromeda-banner-slider .presentation-slider-bullets .image-gallery-bullet {
         padding: 3px; }
         .image-gallery.andromeda-banner-slider .presentation-slider-bullets .image-gallery-bullet.active {
