--- a/styles/scss/image-gallery.scss
+++ b/styles/scss/image-gallery.scss
@@ -54,6 +54,13 @@ $ig-transparent: rgba(0, 0, 0, 0) !default;
         display: block;
       }
     }
+
+    img{
+      @media (max-width: $ig-screen-sm-min) {
+        height: 100vh;
+        max-height: 100%;
+      }
+    }
     
     .meshapp-info-wrapper {
       $title-font-size: 50px;
@@ -91,6 +98,10 @@ $ig-transparent: rgba(0, 0, 0, 0) !default;
         justify-content: center;
         bottom: 15%;
         position: absolute;
+
+        @media (max-width: $ig-screen-sm-min) {
+          bottom: 0;
+        }
 
         .image-gallery-bullet {
           padding: 3px;
